# aotlex

./: .gitignore  README.md  build-win.bat  clean.sh  download-data.sh  pom.xml  test-linux.sh
.github/workflows/: build_jni.yml
jni/: CMakeLists.txt  build.bat  build.sh
jni/src/: CMakeLists.txt  aot.cpp
jni/src/aot/: CMakeLists.txt
jni/src/aot/AgramtabLib/: CMakeLists.txt
jni/src/aot/GraphanLib/: CMakeLists.txt
jni/src/aot/LemmatizerLib/: CMakeLists.txt
jni/src/aot/MorphWizardLib/: CMakeLists.txt
jni/src/aot/PCRE/: CMakeLists.txt
jni/src/aot/RmlThesLib/: CMakeLists.txt
jni/src/aot/StructDictLib/: CMakeLists.txt
jni/src/aot/common/: CMakeLists.txt  utilit.cpp
jni/src/aot/contrib/: CMakeLists.txt
jni/src/aot/contrib/iconv_subset/: CMakeLists.txt
jni/src/jni/: .gitignore  CMakeLists.txt  header.bat  header.sh  jni.cpp
jni/src/jni/aot/: Aot.java
scripts/aot-dict-build/: Dockerfile  build-aot  make  start  unload
src/main/java/aot/: Aot.java  Form.java  FormsGroup.java  LemmResult.java  Paradigm.java
src/test/java/aot/: BasicTest.java
